FIxed header spacing in expanded mode

--- a/client/src/app/shared/components/header/header.component.scss
+++ b/client/src/app/shared/components/header/header.component.scss
@@ -15,6 +15,10 @@
 	}
 	.navlinks-container{
 		margin-top: 85px;
+		max-width: unset;
+		width: 100%;
+		padding-left: 0px;
+		padding-right: 0px;
 	}
 }
 
